environments/gloo-gateway-ui/singlecluster/clusterservices-config/base/gloo-mesh-ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gloo-system-ui
  namespace: gloo-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateways/http-gateway
  http:
  - name: gloo-system-ui
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: gloo-system-ui
        port:
          number: 8090
